--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 ~$TMA03.docx
+/JavaApplication3Desktop App v2/nbproject/private/
+/Desktop App v2/nbproject/private/
+/Desktop App v2/build/
+/Desktop App v2/dist/
+/Desktop App/dist/
